--- a/assignments/assignment2.qmd
+++ b/assignments/assignment2.qmd
@@ -82,8 +82,8 @@ started. But you should (re)write the final solution to be more generic.
 
 # A: Rejection Sampling
 
-This assignment uses the Poisson data available [here](/data/poisson.csv). It is
-a table with 100 rows and two variables, $z$ and $x$, where $z$ takes integer
+This assignment uses the Poisson data available [here](/data/poisson.csv). It
+is a table with 100 rows and two variables, $z$ and $x$, where $z$ takes integer
 values and $x$ takes positive real values.
 
 The purpose of this assignment is to sample from the probability distribution on
@@ -123,12 +123,12 @@ Implement Monte Carlo integration to compute $p(100)$.
 
 Define
 $$
-g*{\theta, n}(x) = \frac{1}{\varphi(\theta)^n} \exp\left(\theta \sum*{k=1}^n
+g_{\theta, n}(x) = \frac{1}{\varphi(\theta)^n} \exp\left(\theta \sum_{k=1}^n
 x_k\right)
 $$
 for $x \in (-1.9, 2)^n$, where
 $$
-\varphi(\theta) = \int\_{-1.9}^2 e^{\theta z} \mathrm{d}z.
+\varphi(\theta) = \int_{-1.9}^2 e^{\theta z} \mathrm{d}z.
 $$
 
 Implement importance sampling to compute $p(100)$ by sampling from
